--- a/index.html
+++ b/index.html
@@ -397,6 +397,9 @@
                     <button
                         class="tab-btn px-6 py-4 font-semibold text-sm border-b-2 border-transparent text-solarized-base1 dark:text-dark-muted hover:text-solarized-base00 dark:hover:text-dark-text transition-all duration-300"
                         data-tab="high-yield">High Yield</button>
+                    <button
+                        class="tab-btn px-6 py-4 font-semibold text-sm border-b-2 border-transparent text-solarized-base1 dark:text-dark-muted hover:text-solarized-base00 dark:hover:text-dark-text transition-all duration-300"
+                        data-tab="anking">Anking</button>
                 </div>
 
                 <div class="flex-1 overflow-y-auto" id="contentScroll">
