--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OnePassOS</title>
+    <title>OnePass</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -284,7 +284,7 @@
             <div class="p-6 border-b border-solarized-base1/20 dark:border-dark-border gradient-overlay">
                 <div class="flex items-center justify-between mb-4">
                     <h1 class="text-2xl font-bold text-solarized-blue dark:text-dark-accent tracking-tight font-sans">
-                        OnePassOS</h1>
+                        OnePass</h1>
                     <button id="darkModeToggle"
                         class="p-2 rounded-lg hover:bg-solarized-base3 dark:hover:bg-dark-hover transition-all duration-300 ripple-container group">
                         <!-- Moon Icon (for Light Mode) -->
@@ -345,7 +345,7 @@
                     </div>
                     <h2
                         class="text-5xl font-black text-transparent bg-clip-text bg-gradient-to-r from-solarized-base01 to-solarized-blue dark:from-white dark:to-dark-accent mb-6 font-display">
-                        Welcome to<br>OnePassOS</h2>
+                        Welcome to<br>OnePass</h2>
                     <p class="text-xl text-solarized-base1 dark:text-dark-muted max-w-md mx-auto leading-relaxed"
                         id="welcomeMessage">Loading lectures...</p>
                 </div>
